--- a/pengajuan.html
+++ b/pengajuan.html
@@ -72,5 +72,9 @@
   <script src="script/api.js"></script>
   <script src="script/auth.js"></script>
   <script src="script/pengajuan.js"></script>
+
+  <footer class="footer">
+      &copy; 2025 Ghaza-Anggit. All rights reserved.
+    </footer>
 </body>
 </html>
