--- a/profile.html
+++ b/profile.html
@@ -43,5 +43,9 @@
   </div>
 
   <script src="script/profile.js"></script>
+
+  <footer class="footer">
+      &copy; 2025 Ghaza-Anggit. All rights reserved.
+    </footer>
 </body>
 </html>
