--- a/arsip.html
+++ b/arsip.html
@@ -72,7 +72,7 @@
                   type="text"
                   id="namaFile"
                   name="namaFile"
-                  placeholder="Contoh: Izin_Kuliah_April_2025.pdf"
+                  placeholder="Contoh: Dokumen.pdf"
                   required
                 />
               </div>
